# protrepair

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
constraints/: release.txt
docs/: faspr-runtime-policy.md  ingress-residue-role-policy.md  radius-policy.md  release-checklist.md  topology-bond-policy.md
scripts/: run_installed_artifact_smoke.py  run_installed_wheel_smoke.py
src/protrepair/: __init__.py  api.py  errors.py
src/protrepair/analysis/: __init__.py  kinds.py  ramachandran.py  results.py  runtime.py  secondary_structure.py
src/protrepair/chemistry/: __init__.py  hydrogen_plans.py  internal_coordinates.py  radii.py  single_atom_inorganic.py
src/protrepair/diagnostics/: __init__.py  chemistry_contradictions.py  clash_pair_generation.py  clash_topology_rules.py  clashes.py  component_support.py  events.py  geometry.py  kinds.py  near_covalent.py  parser_readability.py  parser_topology.py  source_microstate.py  stereochemistry.py  topology.py
src/protrepair/geometry/: __init__.py  exceptions.py  internal_coordinates.py  placement_vector.py  polyhedra.py  rigid.py  rotation.py  vector.py
src/protrepair/io/: __init__.py  gemmi_ingress.py  gemmi_normalization.py  gemmi_writer.py  ingress_policy.py  nonstandard_component_ingress.py  pdb_projection.py  source_connection.py  source_identity.py  structure_ingress.py
src/protrepair/relation/: __init__.py  blueprint.py  uniprot.py  (+8 more)
tests/: __init__.py  conftest.py
tests/benchmark/: test_refinement_outcomes.py  test_refinement_perturbation_outcomes.py  test_refinement_strategy_contracts.py  test_sidechain_operator_measurements.py
tests/corpus/: test_refinement_registry.py
tests/fixtures/: README.md
tests/release/: test_artifact_contents.py
tests/support/: __init__.py  canonical_builders.py  correction_route_benchmarks.py  correction_state_dsl.py  correction_state_fixtures.py  correction_state_registry.py  parser_repair_performance.py  refinement_benchmarks.py  refinement_cases.py  refinement_contract.py  refinement_corpus.py  refinement_perturbation_benchmarks.py  refinement_type_fixtures.py  release_gate.py  representative_cases.py  request_builders.py  retained_non_polymer_components.py  scenario_fixture_matrix.py  sidechain_operator_measurements.py  structure_summary.py  whole_structure_sources.py
tests/unit/: test_alphafold_ingestion.py  test_alphafold_sources.py  test_analysis_runtime.py  test_backbone_window_refinement.py  test_blueprint_coverage.py  test_chemistry_import_boundaries.py  test_clash_diagnostics.py  test_component_ingestion.py  test_component_template_edge_cases.py  test_component_topology.py  test_constitution.py  test_continuous_relaxation_support.py  test_correction_planning.py  test_correction_route_benchmarks.py  test_correction_state_cases.py  test_coverage_planning.py  test_diagnostics_package_ontology.py  test_discrete_corrections.py  test_disulfide_hydrogen_semantics.py  test_disulfide_semantics.py  test_domain_model.py  test_element_identity.py  test_error_contract.py  test_external_reference_workflow.py  test_faspr_backend.py  test_fragment_matching.py  test_gemmi_io.py  test_geometry_diagnostics.py  test_geometry_facet.py  test_geometry_interaction_facts.py  test_geometry_placement_outcomes.py  test_geometry_scientific_regressions.py  test_histidine_protonation_contract.py  test_hydrogen_cleanup.py  test_hydrogen_edge_cases.py  test_hydrogen_expectation_policy.py  test_hydrogen_orientation_scoring.py  test_hydrogen_placement_reporting.py  test_installed_artifact_smoke_script.py  test_installed_wheel_smoke_script.py  (+70 more)
tests/workflow/: test_process_analyses.py  test_process_representatives.py
(+281 files in other folders)
