[build-system]
requires = [
  "hatchling>=1.24",
  "hatch-vcs>=0.5",
  "scikit-build-core>=0.12,<0.13",
]
build-backend = "hatchling.build"

[project]
name = "protrepair"
dynamic = ["version"]
description = "Typed Python package for repairing protein structure files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT AND CC-BY-4.0" }
license-files = [
  "LICENSE",
  "THIRD_PARTY_NOTICES.md",
  "vendor/faspr/LICENSE",
  "vendor/faspr/DUNBRACK_ROTAMER_LIBRARY_NOTICE.md",
  "vendor/faspr/PROVENANCE.md",
  "vendor/faspr/README.upstream.md",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "gemmi>=0.7.5",
  "numpy>=1.26",
  "typing_extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/isty2e/protrepair"
Repository = "https://github.com/isty2e/protrepair"
Issues = "https://github.com/isty2e/protrepair/issues"

[project.optional-dependencies]
refinement = [
  "rdkit",
]
dev = [
  "basedpyright>=1.38.2",
  "hypothesis>=6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.13.2",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "benchmark: opt-in benchmark and executable quality-comparison tests",
  "corpus: tests that depend on deposited or extracted realistic structure fixtures",
  "representative_regression: slow stored-fixture replay with full semantic digest checks",
  "workflow: end-to-end process_structure workflow tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [".tmp"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".tmp"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

[tool.hatch.build.targets.wheel]
packages = ["src/protrepair"]

[tool.hatch.build.targets.wheel.hooks.scikit-build]
experimental = true

[tool.hatch.build.targets.sdist]
only-include = [
  "CHANGELOG.md",
  "CMakeLists.txt",
  "LICENSE",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
  "docs",
  "pyproject.toml",
  "scripts/run_installed_wheel_smoke.py",
  "src/protrepair",
  "vendor/faspr",
]
exclude = [
  ".gitignore",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"
tag-pattern = "^(?:v)?(?P<version>.+)$"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
